--- a/archives.html
+++ b/archives.html
@@ -6,7 +6,7 @@ keywords: PIZn, GitHub, Jekyll, Plugins, Works, Archives, Quotes, Violet, css, h
 ---
 
 <p class="lotus-breadcrub">
-    <a href="{{ site.url }}/index.html" rel="nofollow" rel="nofollow" title="首页">Home</a>
+    <a href="/index.html" rel="nofollow" rel="nofollow" title="首页">Home</a>
     <span> &gt; </span>
     {{ page.title }}
 </p>
@@ -43,8 +43,5 @@ keywords: PIZn, GitHub, Jekyll, Plugins, Works, Archives, Quotes, Violet, css, h
 
 
 {% endfor %}
-
-
-
 
 </article>
