--- a/categories.html
+++ b/categories.html
@@ -19,7 +19,7 @@ keywords: Chan blog,Categories
 <div class="article">
 {% for category in site.categories %} 
   <h2  class="article-year" id="{{ category[0] }}-ref" data-year="&diams;">{{ category[0] | join: "/" }}</h2>
-  <ul style="list-style: none">
+  <ul style="list-style: none; height: 1000px;">
     {% assign pages_list = category[1] %}  
     {% for node in pages_list %}
       {% if node.title != null %}
