--- a/categories.html
+++ b/categories.html
@@ -4,32 +4,34 @@ title: Categories
 keywords: Chan blog,Categories
 ---
 
+<div class="lotus-article rpost">
+	<div class="article">
+	    <h3 class="title">{{ page.title }}</h3>
+	    <ul class="categories">
+	    {% assign categories_list = site.categories %}
+	    {% for category in categories_list %}
+	        <li class="categories-item"><a href="{{ BASE_PATH }}{{ site.JB.categories_path }}#{{ category[0] }}-ref">
+	            {{ category[0] | join: "/" }}
+	        </a></li>
+	    {% endfor %}
+	    </ul>
 
-<div class="article">
-    <h3 class="title">{{ page.title }}</h3>
-    <ul class="categories">
-    {% assign categories_list = site.categories %}
-    {% for category in categories_list %}
-        <li class="categories-item"><a href="{{ BASE_PATH }}{{ site.JB.categories_path }}#{{ category[0] }}-ref">
-            {{ category[0] | join: "/" }}
-        </a></li>
-    {% endfor %}
-    </ul>
-
-<div class="article">
-{% for category in site.categories %} 
-  <h2  class="article-year" id="{{ category[0] }}-ref" data-year="&diams;">{{ category[0] | join: "/" }}</h2>
-  <ul style="list-style: none; height: 1000px;">
-    {% assign pages_list = category[1] %}  
-    {% for node in pages_list %}
-      {% if node.title != null %}
-        {% if group == null or group == node.group %}
-            <li style="background:#F2EEEC; padding:5px; margin:3px 0"><a href="{{ BASE_PATH }}{{node.url}}">{{node.title}}</a></li>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
-   
-  </ul>
-{% endfor %}
-</div>
+		<div class="article">
+		{% for category in site.categories %} 
+		  <h2  class="article-year" id="{{ category[0] }}-ref" data-year="&diams;">{{ category[0] | join: "/" }}</h2>
+		  <ul style="list-style: none; height: 1000px;">
+		    {% assign pages_list = category[1] %}  
+		    {% for node in pages_list %}
+		      {% if node.title != null %}
+		        {% if group == null or group == node.group %}
+		            <li style="background:#F2EEEC; padding:5px; margin:3px 0"><a href="{{ BASE_PATH }}{{node.url}}">{{node.title}}</a></li>
+		        {% endif %}
+		      {% endif %}
+		    {% endfor %}
+		   
+		  </ul>
+		{% endfor %}
+		</div>
+		
+	</div>
 </div>
