--- a/categories.html
+++ b/categories.html
@@ -33,7 +33,7 @@ keywords: Chan blog,Categories
 					    {% for node in pages_list %}
 					    	{% if node.title != null %}
 					        	{% if group == null or group == node.group %}
-					            	<li>{{ node.date | date: "%Y-%m-%d" }} » <a href="{{ BASE_PATH }}{{node.url}}">{{node.title}}</a></li>
+					            	<li>{{ node.date | date: "%Y-%m-%d" }}&nbsp;&raquo; <a href="{{ BASE_PATH }}{{node.url}}">{{node.title}}</a></li>
 					        	{% endif %}
 					     	{% endif %}
 					    {% endfor %}
