--- a/index.html
+++ b/index.html
@@ -81,3 +81,4 @@ keywords: Chan, GitHub, Jekyll, Blog, Works, Archives, Quotes, Violet, css, html
     </article>
 </section>
 -->
+{% include custom/analytics %}
