--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,9 @@ keywords: Chan, GitHub, Jekyll, Plugins, Works, Archives, Quotes, Violet, css, h
 	</p>
 	<hr>
 	<article id="about">
-	    <p>一个不靠谱儿前端er。</p>
+	    <p>博客控，代码控；</p>
+	    <p>热爱生活，热爱前端，喜欢钻研；</p>
+	    <p>特别爱折腾，有空就收藏，也喜欢整理，严重强迫症！</p>
 	    <br>
 	    <p>GitHub：<a href="https://github.com/007sair" target="_blank" title="github">https://github.com/007sair</a></p>
 	</article>
