--- a/categories.html
+++ b/categories.html
@@ -4,7 +4,7 @@ title: Categories
 keywords: Chan blog,Categories
 ---
 
-<div class="lotus-article rpost page-category">
+<div class="lotus-article rpost page-category typo">
 	<p class="breadcrub">
         <a href="/index.html" rel="nofollow" rel="nofollow" title="首页">Home</a>
         <span> &gt; </span>
