--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@ keywords: Chan, GitHub, Jekyll, Plugins, Works, Archives, Quotes, Violet, css, h
 	    <p>特别爱折腾，有空就收藏，也喜欢整理，严重强迫症！</p>
 	    <br>
 	    <p>GitHub：<a href="https://github.com/007sair" target="_blank" title="github">https://github.com/007sair</a></p>
+	    <p>RSS: <a href="{{ site.url }}/feed.xml" target="_blank">{{ site.url }}/feed.xml</a></p>
 	</article>
 
 </div>
