--- a/demo/calc.html
+++ b/demo/calc.html
@@ -14,6 +14,12 @@
 
 .calc2 .left{ float: left; width: -webkit-calc(30% - 40px); background: red; padding: 20px;}
 .calc2 .right{ float: right; width: 70%; background: blue; padding: 20px 0;}
+
+.flex{display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex;}
+.flex div{ line-height: 50px; -webkit-box-flex: 1; -moz-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1;}
+.flex .f1{ background-color: red;}
+.flex .f2{ background-color: blue;}
+.flex .f3{ background-color: yellow;}
 </style>
 </head>
 <body>
@@ -26,5 +32,14 @@
     	<div class="left">1111111</div>
     	<div class="right">222222222222</div>
     </div>
+
+    <div style="clear:both"></div>
+
+    <div class="flex">
+    	<div class="f1">flex1111111111111</div>
+    	<div class="f2">flex2222222222222222</div>
+    	<div class="f3">flex33333</div>
+    </div>
+
 </body>
 </html>
