--- a/demo/calc.html
+++ b/demo/calc.html
@@ -36,9 +36,9 @@
     <div style="clear:both"></div>
 
     <div class="flex">
-    	<div class="f1">flex1111111111111</div>
-    	<div class="f2">flex2222222222222222</div>
-    	<div class="f3">flex33333</div>
+    	<div class="f1">11</div>
+    	<div class="f2">222</div>
+    	<div class="f3">333</div>
     </div>
 
 </body>
