--- a/demo/nav_demo/index.html
+++ b/demo/nav_demo/index.html
@@ -7980,7 +7980,7 @@ $(function() {
 <script src="http://mfile03.miyabaobei.com/resources/scripts/m/fastclick.js"></script>
 <script>FastClick.attach(document.body);</script>
 <script src="http://mfile03.miyabaobei.com/resources/scripts/m/iscroll.js"></script>
-<script src="topNav.js">//上导航</script>
+<script src="topNav.js?v=22">//上导航</script>
 <script>
 $('.m_nav').mnav();
 </script>
