--- a/demo/nav_scroll/demo_anchor.html
+++ b/demo/nav_scroll/demo_anchor.html
@@ -35,14 +35,14 @@
 	<nav class="m_nav">
 		<div class="m_iscoll" id="navscroll">
             <ul>
-            	<li><a href="#1a" title=""><span>锚点1111</span></a></li>
-            	<li><a href="#2a" title=""><span>锚点2222</span></a></li>
+            	<li><a href="#1" title=""><span>锚点1111</span></a></li>
+            	<li><a href="#2" title=""><span>锚点2222</span></a></li>
             	<li><a href="demo_anchor.html"><span>当前</span></a></li>
-            	<li><a href="#3a" title=""><span>锚点33333</span></a></li>
-            	<li><a href="#4a" title=""><span>锚点44444</span></a></li>
+            	<li><a href="#3" title=""><span>锚点33333</span></a></li>
+            	<li><a href="#4" title=""><span>锚点44444</span></a></li>
             	<li><a href="http://www.baidu.com" title=""><span>百度</span></a></li>
-            	<li><a href="#5a" title=""><span>锚点55555</span></a></li>
-            	<li><a href="#6a" title=""><span>锚点66666</span></a></li>
+            	<li><a href="#5" title=""><span>锚点55555</span></a></li>
+            	<li><a href="#6" title=""><span>锚点66666</span></a></li>
             	<li><a href="#error" title=""><span>锚点error</span></a></li>
             	<li><a href="#12" title=""><span>锚点121212</span></a></li>
             </ul>
