--- a/demo/test_anchor.html
+++ b/demo/test_anchor.html
@@ -9,9 +9,9 @@
 <title>Examples</title>
 <style>
 *{ margin: 0; padding: 0;}
-div{ margin-top: 50px; background: red; border: 1px solid #000; font-size: 48px; height: 2000px}
-nav{ position: fixed; top: 0; width: 100%;}
-nav a{ float: left; width: 24%; height: 40px; border: 1px solid #000;}
+div{ margin-top: 20px; padding-top: 100px; background: red; border: 1px solid #000; font-size: 48px; height: 2000px}
+nav{ position: fixed; top: 0; width: 100%; background: #fff;}
+nav a{ float: left; width: 24%; height: 40px; line-height: 40px; text-align: center; border: 1px solid #000;}
 </style>
 </head>
 <body>
