--- a/demo/test_weixin.html
+++ b/demo/test_weixin.html
@@ -17,7 +17,11 @@
     
 	<a href="http://download.miyabaobei.com/Miababy_weichat_V3.9.0.apk" target="_blank" title="">安卓下载包</a>
 
+	<a href="https://itunes.apple.com/cn/app/mi-ya-bao-bei-zhong-guo-zui/id973366293?mt=8" target="_blank" title="">iTunes</a>
+
 	<a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.mia.miababy" target="_blank" title="">应用宝</a>
+
+
 
 </body>
 </html>
