--- a/demo/animateTab/index.html
+++ b/demo/animateTab/index.html
@@ -35,6 +35,7 @@ body{background: #000;}
 	height: 40px;
 	line-height: 40px;
 	text-align: center;
+	cursor: pointer;
 }
 .tab-title span.cur{
 	color: #ff4e88;
