--- a/demo/animateTab/index.html
+++ b/demo/animateTab/index.html
@@ -203,9 +203,7 @@ $(function() {
 
 	new MiaTab({
 		bar: 'tab-title',
-		box: 'tab-container',
-		hasLine: true,
-		hasAnimate: true
+		box: 'tab-container'
 	});
 	
 })
