--- a/demo/nav_scroll/demo_new.html
+++ b/demo/nav_scroll/demo_new.html
@@ -8,7 +8,7 @@
 <meta name="format-detection"content="telephone=no, email=no" />
 <title>new Anchor</title>
 <link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/css.css">
+<link rel="stylesheet" href="css/css.css?0613">
 <style>
 .wrapper{ max-width: 640px; margin: 0 auto;}
 .wrapper section{ height: 500px; font-size: 40px; text-align: center; overflow: hidden; border: 1px solid #000;}
