--- a/demo/nav_scroll/demo_new.html
+++ b/demo/nav_scroll/demo_new.html
@@ -89,7 +89,7 @@ FastClick.attach(document.body);
 <!-- lib end -->
 
 <!-- 内部跳转 begin -->
-<script src="js/topNav_anchor_new.js"></script>
+<script src="js/topNav_anchor_new.js?0614"></script>
 <script>
 $('.m_nav').naver();
 </script>
