--- a/demo/nav_scroll/demo_new.html
+++ b/demo/nav_scroll/demo_new.html
@@ -28,12 +28,12 @@
 		<div class="m_iscoll" id="navscroll">
             <ul>
             	<li><a href="#1" title=""><span>11111</span></a></li>
-            	<li><a href="#2" title=""><span>22222</span></a></li>
+            	<li><a href="#5" title=""><span>55555555</span></a></li>
             	<li><a href="#"><span>当前</span></a></li>
             	<li><a href="#3" title=""><span>33333</span></a></li>
             	<li><a href="#4" title=""><span>4444</span></a></li>
             	<li><a href="http://www.baidu.com" title=""><span>百度</span></a></li>
-            	<li><a href="#5" title=""><span>5555</span></a></li>
+            	<li><a href="#2" title=""><span>22222</span></a></li>
             	<li><a href="#6" title=""><span>6666</span></a></li>
             	<li><a href="#7" title=""><span>7777</span></a></li>
             	<li><a href="#8" title=""><span>8888</span></a></li>
