--- a/demo/nav_scroll/demo_new.html
+++ b/demo/nav_scroll/demo_new.html
@@ -98,7 +98,7 @@ $('.m_nav').naver();
 
 <script>
 setTimeout(function(){
-	$('.banner').height(400);
+	// $('.banner').height(400);
 },2000)	
 </script>
 
