--- a/demo/nav_scroll/demo_new.html
+++ b/demo/nav_scroll/demo_new.html
@@ -29,12 +29,12 @@
 		<div class="m_iscoll" id="navscroll">
             <ul>
             	<li><a href="#1" title=""><span>11111</span></a></li>
-            	<li><a href="#5" title=""><span>55555555</span></a></li>
+            	<li><a href="#2" title=""><span>22222</span></a></li>
             	<li><a href="#"><span>回到顶部</span></a></li>
-            	<li><a href="#3" title=""><span>33333</span></a></li>
+            	<li><a href="#3" title=""><span>3333</span></a></li>
             	<li><a href="#4" title=""><span>4444</span></a></li>
             	<li><a href="http://www.baidu.com" title=""><span>百度</span></a></li>
-            	<li><a href="#2" title=""><span>22222</span></a></li>
+            	<li><a href="#5" title=""><span>5555</span></a></li>
             	<li><a href="#6" title=""><span>6666</span></a></li>
             	<li><a href="#7" title=""><span>7777</span></a></li>
             	<li><a href="#8" title=""><span>8888</span></a></li>
@@ -44,36 +44,44 @@
             <a href="javascript:;" class="openbtn"></a>
         </div>
 	</nav>
-
-	<section class="block1 anchor" id="1">
+	
+	<section class="block0">
+		<h3>这是标题</h3>
+		多余的第一块
+	</section>
+	<section class="block1" id="1">
 		<h3>这是标题</h3>
 		第一个模块
 	</section>	 
-	<section class="block2 anchor" id="2">
+	<section class="block2" id="2">
 		<h3>这是标题</h3>
 		第二个模块
 	</section>
-	<section class="block3 anchor" id="3">
+	<section class="block3" id="3">
 		<h3>这是标题</h3>
 		第三个模块
 	</section>
-	<section class="block4 anchor" id="4">
+	<section class="block4" id="4">
 		<h3>这是标题</h3>
 		第四个模块
 	</section>
-	<section class="block5 anchor" id="5">
+	<section class="block4" id="cuowu">
+		<h3>这是标题</h3>
+		Error模块
+	</section>
+	<section class="block5" id="5">
 		<h3>这是标题</h3>
 		第五个模块
 	</section>
-	<section class="block6 anchor" id="6">
+	<section class="block6" id="6">
 		<h3>这是标题</h3>
 		第六个模块
 	</section>
-	<section class="block7 anchor" id="7">
+	<section class="block7" id="7">
 		<h3>这是标题</h3>
 		第七个模块
 	</section>
-	<section class="block8 anchor" id="8" style="height:200px;">
+	<section class="block8" id="8" style="height:200px;">
 		<h3>这是标题</h3>
 		第八个模块
 	</section>
@@ -92,7 +100,7 @@ FastClick.attach(document.body);
 <!-- 内部跳转 begin -->
 <script src="js/topNav_anchor_new.js?0615"></script>
 <script>
-$('.m_nav').naver();
+$('.m_nav').mnav();
 </script>
 <!-- 内部跳转 end -->
 
