新增向上和向下

--- a/demo/nav_scroll/demo_new.html
+++ b/demo/nav_scroll/demo_new.html
@@ -21,9 +21,7 @@
 
 <div class="wrapper">
 
-	<div class="banner">
-		banner
-	</div>
+	<div class="banner">banner</div>
 
 	<nav class="m_nav">
 		<div class="m_iscoll" id="navscroll">
