--- a/demo/flex-too.html
+++ b/demo/flex-too.html
@@ -6,7 +6,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="format-detection"content="telephone=no, email=no" />
-<title>See demo</title>
+<title>flex样式预览工具</title>
 <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
 <style>
 * {
