--- a/demo/flex-too.html
+++ b/demo/flex-too.html
@@ -56,9 +56,19 @@ pre {
     min-width: 300px;
 }
 .parent {
+    position: relative;
     width: 500px;
     min-height: 500px;
     border: 1px solid #ccc;
+}
+.parent:after {
+    position: absolute;
+    content: '父容器';
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+    color: #ccc;
 }
 .child {
     border: 1px solid #000;
@@ -68,6 +78,8 @@ pre {
     font-size: 36px;
     text-align: center;
     background-color: #fff;
+    position: relative;
+    z-index: 2;
 }
 .createChild {
     padding-bottom: 20px;
@@ -97,21 +109,27 @@ pre {
                 </div>
             </div>
             <div class="createChild">
-                <h3>创建小盒子</h3>
+                <h3>父容器内创建子容器</h3>
                 <div class="area">
-                <el-form label-width="100px">
+                <el-form label-width="60px">
                     <el-form-item label="个数：">
-                        <el-input v-model="childbox.count" placeholder="盒子个数"></el-input>
+                        <el-input v-model="childbox.count" placeholder="子容器个数"></el-input>
                     </el-form-item>
-                    <el-form-item label="最小宽高：">
-                        <el-input v-model="childbox.minSize" placeholder="盒子最小宽高"></el-input>
+                    <el-form-item label="宽高：">
+                        <el-col :span="11">
+                            <el-input v-model="childbox.minSize" placeholder="子容器最小宽高"></el-input>
+                        </el-col>
+                        <el-col class="line" :span="2">-</el-col>
+                        <el-col :span="11">
+                            <el-input v-model="childbox.maxSize" placeholder="子容器最大宽高"></el-input>
+                        </el-col>
                     </el-form-item>
-                    <el-form-item label="最大宽高：">
-                        <el-input v-model="childbox.maxSize" placeholder="盒子最大宽高"></el-input>
+                    <el-form-item label="">
+                        <p style="font-size:12px;line-height:1.3;color:#999;">每个子容器（最小 - 最大）宽高值</p>
                     </el-form-item>
                     <el-form-item>
-                        <el-button type="primary" @click="createChild">立即创建</el-button>
-                        <el-button @click="resetChild">重置</el-button>
+                        <el-button type="primary" @click="createChild">创 建</el-button>
+                        <el-button @click="resetChild">重 置</el-button>
                     </el-form-item>
                 </el-form>
                 </div>
