--- a/demo/flex-too.html
+++ b/demo/flex-too.html
@@ -125,11 +125,11 @@ pre {
                         </el-col>
                     </el-form-item>
                     <el-form-item label="">
-                        <p style="font-size:12px;line-height:1.3;color:#999;">每个子容器（最小 - 最大）宽高值</p>
+                        <p style="font-size:12px;line-height:1.3;color:#999;">创建n个子容器，宽高在50-150的范围内随机生成</p>
                     </el-form-item>
                     <el-form-item>
                         <el-button type="primary" @click="createChild">创 建</el-button>
-                        <el-button @click="resetChild">重 置</el-button>
+                        <el-button @click="resetChild">清 空</el-button>
                     </el-form-item>
                 </el-form>
                 </div>
