--- a/demo/flex-too.html
+++ b/demo/flex-too.html
@@ -101,7 +101,7 @@ pre {
                 <div class="area">
                     <ul>
                         <li>创建小盒子</li>
-                        <li>在父容器、子容器内选择样式</li>
+                        <li>在父容器、子项目内选择样式</li>
                         <li>预览区查看想要的效果</li>
                         <li>复制代码区代码到实际项目中</li>
                         <li>对flex有任何疑问请点下方传送门</li>
@@ -109,23 +109,23 @@ pre {
                 </div>
             </div>
             <div class="createChild">
-                <h3>父容器内创建子容器</h3>
+                <h3>父容器内创建子项目</h3>
                 <div class="area">
                 <el-form label-width="60px">
                     <el-form-item label="个数：">
                         <el-input v-model="childbox.count" placeholder="子容器个数"></el-input>
                     </el-form-item>
                     <el-form-item label="宽高：">
-                        <el-col :span="11">
+                        <el-col :span="10">
                             <el-input v-model="childbox.minSize" placeholder="子容器最小宽高"></el-input>
                         </el-col>
-                        <el-col class="line" :span="2">-</el-col>
+                        <el-col class="line" :span="3" style="text-align:center;">-</el-col>
                         <el-col :span="11">
                             <el-input v-model="childbox.maxSize" placeholder="子容器最大宽高"></el-input>
                         </el-col>
                     </el-form-item>
                     <el-form-item label="">
-                        <p style="font-size:12px;line-height:1.3;color:#999;">创建n个子容器，宽高在50-150的范围内随机生成</p>
+                        <p style="font-size:12px;line-height:1.3;color:#999;">创建n个子容器，宽高在 50-150 的范围内随机生成</p>
                     </el-form-item>
                     <el-form-item>
                         <el-button type="primary" @click="createChild">创 建</el-button>
@@ -150,10 +150,13 @@ pre {
                 <el-form label-width="150px">
                     <h3>父容器</h3>
                     <div class="area">
-                        <template v-for="form in parentCss">
+                        <template v-for="(form, index) in parentCss">
                             <el-form-item :label="form.property" v-if="form.type == 'select'">
-                                <el-select v-model="form.value" :placeholder="form.desc">
-                                    <el-option :label="value" :value="getValue(value)" v-for="value in form.values"></el-option>
+                                <el-select v-model="form.value" clearable :placeholder="form.desc">
+                                    <el-option :label="item.value+' / '+item.label" :value="item.value" v-for="item in form.values" :key="item.value">
+                                        <span style="float: left">{{ item.value }}</span>
+                                        <span style="float: right; margin-left: 10px; color: #8492a6; font-size: 13px">{{ item.label }}</span>
+                                    </el-option>
                                 </el-select>
                             </el-form-item>
                             <el-form-item :label="form.property" v-else="form.tyoe == 'text'">
@@ -161,12 +164,15 @@ pre {
                             </el-form-item>
                         </template>
                     </div>
-                    <h3>子容器</h3>
+                    <h3>子项目</h3>
                     <div class="area">
-                    <template v-for="form in childCss">
+                    <template v-for="(form, index) in childCss">
                         <el-form-item :label="form.property" v-if="form.type == 'select'">
-                            <el-select v-model="form.value" :placeholder="form.desc">
-                                <el-option :label="value" :value="value" v-for="value in form.values"></el-option>
+                            <el-select v-model="form.value" clearable :placeholder="form.desc">
+                                <el-option :label="item.value+' / '+item.label" :value="item.value" v-for="item in form.values" :key="item.value">
+                                    <span style="float: left">{{ item.value }}</span>
+                                    <span style="float: right; margin-left: 10px;  color: #8492a6; font-size: 13px">{{ item.label }}</span>
+                                </el-option>
                             </el-select>
                         </el-form-item>
                         <el-form-item :label="form.property" v-else="form.tyoe == 'text'">
@@ -181,17 +187,20 @@ pre {
         <div class="f-child">
             <h3>预览区</h3>
             <div class="parent">
-                <div class="child" :style="{ width: item.width, height: item.height, lineHeight: item.height }" v-for="(item, index) in childbox.arr">{{ index+1 }}</div>
+                <div class="child" :style="{ width: item.width, height: item.height, lineHeight: item.height }" v-for="(item, index) in childbox.childs">{{ index+1 }}</div>
             </div>
         </div>
 
         <div class="f-child">
             <h3>代码区</h3>
-            <pre>{{ createParentCss('.parent') }}{{ createChildCss('.child') }}{{ childbox }}</pre>
-            <dl class="refer">
-                <dt></dt>
-                
-            </dl>
+<pre>
+/* 父容器类 */
+{{ createParentCss('.parent') }}
+/* 子项目类 */
+{{ createChildCss('.child') }}
+/* 子项目数据 */
+{{ childbox }}
+</pre>
         </div>
 
     </div>
@@ -201,7 +210,7 @@ pre {
 
 </body>
 <!-- 先引入 Vue -->
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
+<script src="https://unpkg.com/vue/dist/vue.min.js"></script>
 <!-- 引入组件库 -->
 <script src="https://unpkg.com/element-ui/lib/index.js"></script>
 <script>
@@ -210,37 +219,130 @@ pre {
         {
             property: 'display',
             desc: '盒模型属性',
-            values: ['flex | 弹性布局', 'block | 块', 'inline-box | 内联块', 'inline | 内联'],
+            values: [
+                {
+                    value: 'flex',
+                    label: '弹性布局'
+                },{
+                    value: 'block',
+                    label: '块'
+                },{
+                    value: 'inline-box',
+                    label: '内联块'
+                }
+            ],
             value: '',
             type: 'select'
         },{
             property: 'flex-direction',
             desc: '主轴方向',
-            values: ['row | 左到右（默认）', 'row-reverse | 右到左', 'column | 上到下', 'column-reverse | 下到上'],
+            values: [
+                {
+                    value: 'row',
+                    label: '左到右（默认）'
+                },{
+                    value: 'row-reverse',
+                    label: '右到左'
+                },{
+                    value: 'column',
+                    label: '上到下'
+                },{
+                    value: 'column-reverse',
+                    label: '下到上'
+                }
+            ],
             value: '',
             type: 'select'
         },{
             property: 'flex-wrap',
             desc: '换行',
-            values: ['nowrap | 不换行（默认）', 'wrap | 换行', 'wrap-reverse | 换行并第一行在下方'],
+            values: [
+                {
+                    value: 'nowrap',
+                    label: '不换行（默认）'
+                },{
+                    value: 'wrap',
+                    label: '换行'
+                },{
+                    value: 'wrap-reverse',
+                    label: '换行并第一行在下方'
+                },{
+                    value: 'column-reverse',
+                    label: '下到上'
+                }
+            ],
             value: '',
             type: 'select'
         },{
             property: 'justify-content',
             desc: '主轴对齐方式',
-            values: ['flex-start | 左对齐（默认）', 'flex-end | 右对齐', 'center | 居中对齐', 'space-between | 两端对齐', 'space-around | 平均分布'],
+            values: [
+                {
+                    value: 'flex-start',
+                    label: '左对齐（默认）'
+                },{
+                    value: 'flex-end',
+                    label: '右对齐'
+                },{
+                    value: 'center',
+                    label: '居中对齐'
+                },{
+                    value: 'space-between',
+                    label: '两端对齐'
+                },{
+                    value: 'space-around',
+                    label: '平均分布'
+                }
+            ],
             value: '',
             type: 'select'
         },{
             property: 'align-items',
             desc: '交叉轴对齐方式',
-            values: ['flex-start | 顶部对齐（默认）','flex-end | 底部对齐','center | 居中对齐','baseline | 上下对齐并铺满','stretch | 文本基线对齐'],
+            values: [
+                {
+                    value: 'flex-start',
+                    label: '顶部对齐（默认）'
+                },{
+                    value: 'flex-end',
+                    label: '底部对齐'
+                },{
+                    value: 'center',
+                    label: '居中对齐'
+                },{
+                    value: 'baseline',
+                    label: '上下对齐并铺满'
+                },{
+                    value: 'stretch',
+                    label: '文本基线对齐'
+                }
+            ],
             value: '',
             type: 'select'
         },{
             property: 'align-content',
             desc: '多主轴对齐',
-            values: ['flex-start | 顶部对齐（默认）','flex-end | 底部对齐','center | 居中对齐','space-between | 上下对齐平均分布','space-around | 上下对齐并铺满','stretch | 占满'],
+            values: [
+                {
+                    value: 'flex-start',
+                    label: '顶部对齐（默认）'
+                },{
+                    value: 'flex-end',
+                    label: '底部对齐'
+                },{
+                    value: 'center',
+                    label: '居中对齐'
+                },{
+                    value: 'space-between',
+                    label: '上下对齐平均分布'
+                },{
+                    value: 'space-around',
+                    label: '上下对齐并铺满'
+                },{
+                    value: 'stretch',
+                    label: '占满'
+                }
+            ],
             value: '',
             type: 'select'
         }
@@ -274,7 +376,27 @@ pre {
         },{
             property: 'align-self',
             desc: '不一样的对齐方式',
-            values: ['auto | 继承父级','flex-start | 顶部对齐（默认）','flex-end | 底部对齐','center | 居中对齐','baseline','stretch'],
+            values: [
+                {
+                    value: 'auto',
+                    label: '继承父级'
+                },{
+                    value: 'flex-start',
+                    label: '顶部对齐（默认）'
+                },{
+                    value: 'flex-end',
+                    label: '底部对齐'
+                },{
+                    value: 'center',
+                    label: '居中对齐'
+                },{
+                    value: 'baseline',
+                    label: ''
+                },{
+                    value: 'stretch',
+                    label: ''
+                }
+            ],
             value: '',
             type: 'select'
         }
@@ -289,10 +411,10 @@ pre {
                 parentCss: parent.slice(0),
                 childCss: child.slice(0),
                 childbox: {
-                    arr: [],
-                    count: 7,
+                    count: 3,
                     minSize: 50,
-                    maxSize: 150
+                    maxSize: 150,
+                    childs: []
                 }
             }
         },
@@ -301,53 +423,58 @@ pre {
                 document.getElementById('created').innerHTML = this.p_css + this.c_css;
             },
             createParentCss: function (sClassName) {
-                this.p_css = arr2css(sClassName, this.parentCss);
+                this.p_css = this.arr2css(sClassName, this.parentCss);
                 this.insertCss();
-                return arr2css(sClassName, this.parentCss)
+                return this.arr2css(sClassName, this.parentCss)
             },
             createChildCss: function (sClassName) {
-                this.c_css = arr2css(sClassName, this.childCss);
+                this.c_css = this.arr2css(sClassName, this.childCss);
                 this.insertCss();
-                return arr2css(sClassName, this.childCss);
-            },
-            getValue: function(val) {
-                if (val.indexOf('|') > -1) {
-                    return val.split('|')[0].trim()
-                }
-                return val
+                return this.arr2css(sClassName, this.childCss);
             },
             createChild: function() {
                 var child = {};
                 for (var i = 0; i < this.childbox.count; i++) {
                     var height = this.rndSize();
-                    this.childbox.arr.push({
+                    this.childbox.childs.push({
                         width: parseInt(this.rndSize()) + 'px',
                         height: parseInt(height) + 'px'
                     });
                 }
             },
             resetChild: function() {
-                this.childbox.arr = [];
+                this.childbox.childs = [];
             },
             rndSize: function() {
                 return Math.random() * (this.childbox.maxSize - this.childbox.minSize) + this.childbox.minSize;
+            },
+            arr2css: function(sClassName, arr) {
+                var css = '';
+                arr.forEach(function(item) {
+                    if (item.value) {
+                        css += '    ' + item.property +':'+ item.value + ';\n'
+                    }
+                })
+                return sClassName +' { \n' + css + '}\n';
+            }
+        },
+        watch: {
+            parentCss: {
+                handler: function (val, oldVal) {
+                    console.log(val, oldVal);
+                    if (this.childbox.childs.length == 0) {
+                        this.$message({
+                            showClose: true,
+                            message: '请在<左侧>创建<子项目>后再选择样式~',
+                            type: 'warning'
+                        });
+                    }
+                },
+                deep: true
             }
         }
     });
     
-    function arr2css(sClassName, arr) {
-        var css = '';
-        var start = sClassName +'{ \n',
-            end = '}\n';
-
-        arr.forEach(function(item) {
-            if (item.value) {
-                css += '    ' + item.property +':'+ item.value + ';\n'
-            }
-        })
-        return start + css + end;
-    }
-
 </script>
 
 </html>
