--- a/demo/flex-too.html
+++ b/demo/flex-too.html
@@ -100,9 +100,9 @@ pre {
                 <h3>使用方法</h3>
                 <div class="area">
                     <ul>
-                        <li>创建小盒子</li>
+                        <li>创建n个子项目</li>
                         <li>在父容器、子项目内选择样式</li>
-                        <li>预览区查看想要的效果</li>
+                        <li>预览区查看最终效果</li>
                         <li>复制代码区代码到实际项目中</li>
                         <li>对flex有任何疑问请点下方传送门</li>
                     </ul>
