--- a/demo/flex-too.html
+++ b/demo/flex-too.html
@@ -187,7 +187,7 @@ pre {
 
         <div class="f-child">
             <h3>预览区</h3>
-            <div class="parent">
+            <div class="parent" style="width:500px;">
                 <div class="child" :style="{ width: item.width, height: item.height, lineHeight: item.height }" v-for="(item, index) in childbox.childs">{{ index+1 }}</div>
             </div>
         </div>
