--- a/demo/TSL/index.html
+++ b/demo/TSL/index.html
@@ -73,7 +73,7 @@
 
 <script src="http://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
 <script src="http://cdn.bootcss.com/dot/1.1.2/doT.min.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/007sair/TSL/master/dist/js/index.js"></script></body>
+<script type="text/javascript" src="js/index.js"></script></body>
 
 <script>
 $(function() {
