--- a/themes/maupassant/source/demo/flex-tool.html
+++ b/themes/maupassant/source/demo/flex-tool.html
@@ -7,7 +7,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="format-detection"content="telephone=no, email=no" />
 <title>flex样式预览工具</title>
-<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
+<link rel="stylesheet" href="https://unpkg.com/element-ui@2.0.0/lib/theme-chalk/index.css">
 <style>
 * {
     margin: 0;
@@ -96,7 +96,7 @@ pre {
 
     <div class="f-parent">
 
-        <div class="f-child" style="width: 15%;min-width:255px;">
+        <div class="f-child" style="width: 15%;min-width:270px;">
             <div class="readme">
                 <h3>使用方法</h3>
                 <div class="area">
@@ -211,9 +211,9 @@ pre {
 
 </body>
 <!-- 先引入 Vue -->
-<script src="https://unpkg.com/vue/dist/vue.min.js"></script>
+<script src="https://unpkg.com/vue@2.5.2/dist/vue.min.js"></script>
 <!-- 引入组件库 -->
-<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+<script src="https://unpkg.com/element-ui@2.0.0/lib/index.js"></script>
 <script>
 
     var parent = [
@@ -227,9 +227,6 @@ pre {
                 },{
                     value: 'block',
                     label: '块'
-                },{
-                    value: 'inline-box',
-                    label: '内联块'
                 }
             ],
             value: '',
